--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
         "react-scripts": "5.0.0",
         "uuid": "^8.3.2"
     },
+    "devDependencies": {
+        "concurrently": "^5.3.0",
+        "http-server": "^0.12.3",
+        "netlify-cli": "^10.3.1"
+    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "dev": "http-server src -p 8080",
+        "netlify": "./node_modules/.bin/netlify"
     },
     "eslintConfig": {
         "extends": "react-app"
